Minor edits to man1 and man3 docs
Whilst the edits were required, the main purpose of the commit
is to test if it triggers a rebuild of the man1 and man3 index documents.

I suspect it will not, in which case the Makefile conditional tests need
changing.

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/man/man1/axis-remote.asciidoc
+++ b/docs/man/man1/axis-remote.asciidoc
@@ -75,25 +75,24 @@ None
 
 
 None known at this time. 
-.PP
 
 
 
 == AUTHOR
 
 
-This man page written by Alex Joni, as part of the Machinekit project.
+This man page was written by Alex Joni, for Linuxcnc and is now part of the Machinekit project.
 
 
 
 == REPORTING BUGS
-Report bugs to alex_joni AT users DOT sourceforge DOT net
+Report bugs via the machinekit forum at https://groups.google.com/forum/#!forum/machinekit
 
 
 
 == COPYRIGHT
 
 
-Copyright \(co 2007 Alex Joni.
+Copyright (c) 2007 Alex Joni.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
