--- a/docs/man/man3/undocumented_hal.asciidoc
+++ b/docs/man/man3/undocumented_hal.asciidoc
@@ -15,5 +15,8 @@ undocumented -- undocumented functions in HAL
 
 
 == SEE ALSO
-The header file __hal.h__.  Most hal functions have documentation
-in that file.
+The header file __hal.h__.  
+
+https://github.com/machinekit/machinekit/blob/master/src/hal/lib/hal.h
+
+Most hal functions have documentation in that file.
