--- a/docs/man/man3/hm2_pktuart_read.asciidoc
+++ b/docs/man/man3/hm2_pktuart_read.asciidoc
@@ -15,12 +15,12 @@
 
 
 == SYNTAX
-`int *hm2_pktuart_read*(char *name,  unsigned char data[], u8 *num_frames, u16 *max_frame_length, u16 frame_sizes[])`
+int *hm2_pktuart_read*(char *name,  unsigned char data[], u8 *num_frames, u16 *max_frame_length, u16 frame_sizes[])
 
 
 
 == DESCRIPTION
-`*hm2_pktuart_read*` reads data from the PktUART `name`.
+`*hm2_pktuart_read*` reads data from the PktUART `name`. 
 `name` is a unique string given to each PktUART instance during hostmot2 setup.
 The names of the available channels are printed to standard output during
 the driver loading process and take the form:
