--- a/docs/man/man3/hm2_pktuart_read.asciidoc
+++ b/docs/man/man3/hm2_pktuart_read.asciidoc
@@ -72,8 +72,7 @@ Negative error codes are:
 
  -1140 - RxArraySizeError, the size of the data array is not large enough
  
-
-
+{empty} +
 
 == SEE ALSO
 
