Remove all bracketed suffixes from man1/*.asciidoc & man3/*.asciiidoc
These are relics from the old troff man page system to
denote directory designation within the man tree.
The corresponding suffixes in the filenames have already been deleted.

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/man/man1/axis-remote.asciidoc
+++ b/docs/man/man1/axis-remote.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= axis-remote(1)
+= axis-remote
 :manmanual: HAL Components
 :mansource: ../man/man1/axis-remote.1.asciidoc
 :man version : 
@@ -57,7 +57,7 @@ Load the G-code file **FILENAME**.
 
 
 == SEE ALSO
-**axis(1)**
+**axis**
 
 Much more information about Machinekit and HAL is available in the Machinekit
 and HAL User Manuals, found at /usr/share/doc/machinekit/.
