--- a/docs/man/man1/pyvcp.asciidoc
+++ b/docs/man/man1/pyvcp.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= PYVCP(1)
+= PYVCP
 :manmanual: HAL Components
 :mansource: ../man/man1/pyvcp.1.asciidoc
 :man version : 
