--- a/docs/man/man3/PM_ROTATION_VECTOR.asciidoc
+++ b/docs/man/man3/PM_ROTATION_VECTOR.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= funct(3)
+= funct
 :manmanual: HAL Components
 :mansource: ../man/man3/PM_ROTATION_VECTOR.3.asciidoc
 :man version : 
