--- a/docs/man/man3/hm2_tram_add_bspi_frame.asciidoc
+++ b/docs/man/man3/hm2_tram_add_bspi_frame.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hm2_tram_add_bspi_frame(3hm2)
+= hm2_tram_add_bspi_frame
 \# Author Andy Pugh
 \# Issued under the terms of the GPL v2 License or any later version
 :manmanual: HAL Components
