--- a/docs/man/man3/undocumented_rtapi.asciidoc
+++ b/docs/man/man3/undocumented_rtapi.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= undocumented(3rtapi)
+= undocumented:-  rtai
 :manmanual: HAL Components
 :mansource: ../man/man3/undocumented.3rtapi.asciidoc
 :man version : 
