--- a/docs/man/man1/halmeter.asciidoc
+++ b/docs/man/man1/halmeter.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= HALMETER(1)
+= HALMETER
 :manmanual: HAL Components
 :mansource: ../man/man1/halmeter.1.asciidoc
 :man version : 
