--- a/docs/man/man1/halui.asciidoc
+++ b/docs/man/man1/halui.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= HALUI(1)
+= HALUI
 :manmanual: HAL Components
 :mansource: ../man/man1/halui.1.asciidoc
 :man version : 
