--- a/docs/man/man1/vfs11_vfd.asciidoc
+++ b/docs/man/man1/vfs11_vfd.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= vfs11_vfd(1)
+= vfs11_vfd
 :manmanual: HAL Components
 :mansource: ../man/man1/vfs11_vfd.1.asciidoc
 :man version : 
