--- a/docs/man/man3/hal_create_thread.asciidoc
+++ b/docs/man/man3/hal_create_thread.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hal_create_thread(3hal)
+= hal_create_thread
 :manmanual: HAL Components
 :mansource: ../man/man3/hal_create_thread.3hal.asciidoc
 :man version : 
@@ -63,4 +63,4 @@ Returns a HAL status code.
 
 
 == SEE ALSO
-**hal_export_funct(3hal)**
+**hal_export_funct**
