--- a/docs/man/man3/hal_exit.asciidoc
+++ b/docs/man/man3/hal_exit.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hal_exit(3hal)
+= hal_exit
 :manmanual: HAL Components
 :mansource: ../man/man3/hal_exit.3hal.asciidoc
 :man version : 
