--- a/docs/man/man3/hal_export_funct.asciidoc
+++ b/docs/man/man3/hal_export_funct.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hal_export_funct(3hal)
+= hal_export_funct
 :manmanual: HAL Components
 :mansource: ../man/man3/hal_export_funct.3hal.asciidoc
 :man version : 
@@ -64,4 +64,4 @@ Returns a HAL status code.
 
 
 == SEE ALSO
-**hal_create_thread(3hal)**, **hal_add_funct_to_thread(3hal)**
+**hal_create_thread**, **hal_add_funct_to_thread**
