--- a/docs/man/man3/hal_malloc.asciidoc
+++ b/docs/man/man3/hal_malloc.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hal_malloc(3hal)
+= hal_malloc
 :manmanual: HAL Components
 :mansource: ../man/man3/hal_malloc.3hal.asciidoc
 :man version : 
