--- a/docs/man/man3/hal_parport.asciidoc
+++ b/docs/man/man3/hal_parport.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= funct(3hal)
+= hal_parport
 :manmanual: HAL Components
 :mansource: ../man/man3/hal_parport.3hal.asciidoc
 :man version : 
@@ -10,7 +10,7 @@
 
 == NAME
 
-funct -- one-line description of funct
+hal_parport
 
 
 
