--- a/docs/man/man3/hal_set_lock.asciidoc
+++ b/docs/man/man3/hal_set_lock.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hal_set_lock(3hal)
+= hal_set_lock
 :manmanual: HAL Components
 :mansource: ../man/man3/hal_set_lock.3hal.asciidoc
 :man version : 
