--- a/docs/man/man3/hal_start_threads.asciidoc
+++ b/docs/man/man3/hal_start_threads.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hal_start_threads(3hal)
+= hal_start_threads
 :manmanual: HAL Components
 :mansource: ../man/man3/hal_start_threads.3hal.asciidoc
 :man version : 
@@ -41,5 +41,5 @@ Returns a HAL status code.
 
 
 == SEE ALSO
-**hal_export_funct(3hal)**, **hal_create_thread(3hal)**,
-**hal_add_funct_to_thread(3hal)**
+**hal_export_funct**, **hal_create_thread**,
+**hal_add_funct_to_thread**
