--- a/docs/man/man3/hm2_allocate_bspi_tram.asciidoc
+++ b/docs/man/man3/hm2_allocate_bspi_tram.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hm2_allocate_bspi_tram(3hm2)
+= hm2_allocate_bspi_tram
 \# Author Andy Pugh
 \# Issued under the terms of the GPL v2 License or any later version
 
