--- a/docs/man/man3/hm2_bspi_set_read_function.asciidoc
+++ b/docs/man/man3/hm2_bspi_set_read_function.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hm2_bspi_set_read_function(3hm2)
+= hm2_bspi_set_read_function
 \# Author Andy Pugh
 \# Issued under the terms of the GPL v2 License or any later version
 
