--- a/docs/man/man3/hm2_bspi_setup_chan.asciidoc
+++ b/docs/man/man3/hm2_bspi_setup_chan.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hm2_bspi_setup_chan(3hm2)
+= hm2_bspi_setup_chan
 \# Author Andy Pugh
 \# Issued under the terms of the GPL v2 License or any later version
 :manmanual: HAL Components
