--- a/docs/man/man3/hm2_uart_send.asciidoc
+++ b/docs/man/man3/hm2_uart_send.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hm2_uart_send(3hm2)
+= hm2_uart_send
 \# Author Andy Pugh
 \# Issued under the terms of the GPL v2 License or any later version
 :manmanual: HAL Components
