--- a/docs/man/man3/rtapi_app_exit.asciidoc
+++ b/docs/man/man3/rtapi_app_exit.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_app_exit(3rtapi)
+= rtapi_app_exit
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_app_exit.3rtapi.asciidoc
 :man version : 
@@ -46,6 +46,6 @@ realtime) context.
 
 
 == SEE ALSO
-**rtapi_app_main(3rtapi)**,
-**rtapi_exit(3rtapi)**,
-**hal_exit(3hal)**
+**rtapi_app_main**,
+**rtapi_exit**,
+**hal_exit**
