--- a/docs/man/man3/rtapi_app_main.asciidoc
+++ b/docs/man/man3/rtapi_app_main.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_app_main(3rtapi)
+= rtapi_app_main
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_app_main.3rtapi.asciidoc
 :man version : 
@@ -45,6 +45,6 @@ realtime) context.
 
 
 == SEE ALSO
-**rtapi_app_exit(3rtapi)**,
-**rtapi_init(3rtapi)**,
-**hal_init(3hal)**
+**rtapi_app_exit**,
+**rtapi_init**,
+**hal_init**
