--- a/docs/man/man3/rtapi_clock_set_period.asciidoc
+++ b/docs/man/man3/rtapi_clock_set_period.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_clock_set_period(3rtapi)
+= rtapi_clock_set_period
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_clock_set_period.3rtapi.asciidoc
 :man version : 
