--- a/docs/man/man3/rtapi_delay.asciidoc
+++ b/docs/man/man3/rtapi_delay.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_delay(3rtapi)
+= rtapi_delay
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_delay.3rtapi.asciidoc
 :man version : 
@@ -52,4 +52,4 @@ May be called from init/cleanup code, and from within realtime tasks.
 
 
 == SEE ALSO
-**rtapi_clock_set_period(3rtapi)**
+**rtapi_clock_set_period**
