--- a/docs/man/man3/rtapi_div_u64.asciidoc
+++ b/docs/man/man3/rtapi_div_u64.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_div_u64(3rtapi)
+= rtapi_div_u64
 \" Copyright (C) 2013 Jeff Epler <jepler@unpythonic.net>
 \"
 \" This program is free software; you can redistribute it and/or
