--- a/docs/man/man3/rtapi_get_time.asciidoc
+++ b/docs/man/man3/rtapi_get_time.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_get_time(3rtapi)
+= rtapi_get_time
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_get_time.3rtapi.asciidoc
 :man version : 
