--- a/docs/man/man3/rtapi_init.asciidoc
+++ b/docs/man/man3/rtapi_init.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_init(3rtapi)
+= rtapi_init
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_init.3rtapi.asciidoc
 :man version : 
