--- a/docs/man/man3/rtapi_module_param.asciidoc
+++ b/docs/man/man3/rtapi_module_param.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_module_param(3rtapi)
+= rtapi_module_param
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_module_param.3rtapi.asciidoc
 :man version : 
@@ -63,7 +63,7 @@ They must be used after the associated variable or function has been defined.
 == NOTES
 EXPORT_FUNCTION makes a symbol available for use by a subsequently loaded
 component.  It is unrelated to hal functions, which are described in
-hal_export_funct(3hal)
+hal_export_funct
 
 
 
