--- a/docs/man/man3/rtapi_mutex.asciidoc
+++ b/docs/man/man3/rtapi_mutex.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_mutex(3rtapi)
+= rtapi_mutex
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_mutex.3rtapi.asciidoc
 :man version : 
