--- a/docs/man/man3/rtapi_task_wait.asciidoc
+++ b/docs/man/man3/rtapi_task_wait.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= rtapi_task_wait(3rtapi)
+= rtapi_task_wait
 :manmanual: HAL Components
 :mansource: ../man/man3/rtapi_task_wait.3rtapi.asciidoc
 :man version : 
@@ -36,4 +36,4 @@ None
 
 
 == SEE ALSO
-**rtapi_task_start(3rtapi)**, **rtapi_task_pause(3rtapi)**
+**rtapi_task_start**, **rtapi_task_pause**
