--- a/docs/man/man3/hm2_pktuart_read.asciidoc
+++ b/docs/man/man3/hm2_pktuart_read.asciidoc
@@ -2,7 +2,7 @@
 ---
 :skip-front-matter:
 
-= hm2_pktuart_read(3hm2)
+= hm2_pktuart_read
 :manmanual: HAL Components
 :mansource: ../man/man3/hm2_pktuart_read.3hm2.asciidoc
 :man version : 
