--- a/docs/man/man1/halcmd.asciidoc
+++ b/docs/man/man1/halcmd.asciidoc
@@ -3,22 +3,18 @@
 :skip-front-matter:
 
 = HALCMD
-.de URL
-\\$2 \(laURL: \\$1 \(ra\\$3
-.if \n[.g] .mso www.tmac
 :manmanual: HAL Components
 :mansource: ../man/man1/halcmd.1.asciidoc
 :man version : 
 
 
 == NAME
-halcmd -- manipulate the LinuxCNC HAL from the command line
+halcmd -- manipulate the Machinekit HAL from the command line
 
 
 == SYNOPSIS
 halcmd
 [__OPTIONS__] [__COMMAND__ [__ARG__]]
-.PP
 
 
 == DESCRIPTION
@@ -27,7 +23,7 @@ Layer) from the command line.  **halcmd** can optionally read
 commands from a file, allowing complex HAL configurations to be
 set up with a single command.
 
-If the **readline** library is available when LinuxCNC is compiled, then
+If the **readline** library is available when Machinekit is compiled, then
 **halcmd** offers commandline editing and completion when running
 interactively.  Use the up arrow to recall previous commands, and press tab to
 complete the names of items such as pins and signals.
@@ -98,12 +94,15 @@ In systems with realtime, **halcmd** calls the
 **linuxcnc_module_helper** to load realtime modules.
 **linuxcnc_module_helper** is a setuid program and is compiled with
 a whitelist of modules it is allowed to load.  This is currently
-just a list of **LinuxCNC**-related modules.  The
+just a list of **Machinekit**-related modules.  The
 **linuxcnc_module_helper** execs insmod, so return codes and error
 messages are those from insmod.  Administrators who wish to
 restrict which users can load these **LinuxCNC**-related kernel
 modules can do this by setting the permissions and group on
 **linuxcnc_module_helper** appropriately.
+
+NB.  The *linuxcnc* name is retained for the time being in several files
+where there is a complex interdependence chain
 
 In systems without realtime **halcmd** calls the
 **rtapi_app** which creates the simulated realtime environment
@@ -121,18 +120,17 @@ also works by execing **linuxcnc_module_helper** or **rtapi_app**, just like
 (__load__ __Us__e__r__space component) Executes the given
 __unix-command__, usually to load a userspace component.
 __[flags]__ may be one or more of:
-.RS
-.IP \(bu 4
+
 **-W** to wait for the component to become ready.  The component
 is assumed to have the same name as the first argument of the command.
-.IP \(bu 4
+
 **-Wn name** to wait for the component, which will have the given
 name.
-.IP \(bu 4
+
 **-w** to wait for the program to exit
-.IP \(bu 4
+
 **-i** to ignore the program return value (with -w)
-.RE
+
 
 **waitusr** __[-i]__  __name__
 (__wait__ for __Us__e__r__space component) Waits for user
@@ -353,18 +351,20 @@ Removes any alias from the pin or parameter alias.
 == SUBSTITUTION
 After a command is read but before it is executed, several types of variable
 substitution take place.
-.SS Environment Variables
+
+=== Environment Variables
 Environment variables have the following formats:
-.IP
+
 **$ENVVAR** followed by end-of-line or whitespace
-.IP
+
 **$(ENVVAR)**
-.SS Inifile Variables
+
+=== Inifile Variables
 Inifile variables are available only when an inifile was specified with the
 halcmd **-i** flag.  They have the following formats:
-.IP
+
 **[SECTION]VAR** followed by end-of-line or whitespace
-.IP
+
 **[SECTION](VAR)**
 
 
@@ -384,12 +384,12 @@ includes major contributions by several members of the project.
 
 
 == REPORTING BUGS
-Report bugs to the
-.URL http://sf.net/tracker/?group_id=6744&atid=106744 "LinuxCNC bug tracker" .
+Report bugs to the Machinekit forum
+https://groups.google.com/forum/#!forum/machinekit
 
 
 == COPYRIGHT
-Copyright \(co 2003 John Kasunich.
+Copyright (c) 2003 John Kasunich.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
