--- a/docs/man/man1/halmeter.asciidoc
+++ b/docs/man/man1/halmeter.asciidoc
@@ -119,10 +119,10 @@ the LinuxCNC development team.
 
 
 == REPORTING BUGS
-Report bugs to jmkasunich AT users DOT sourceforge DOT net
-
+Report bugs to the Machinekit forum
+https://groups.google.com/forum/#!forum/machinekit
 
 == COPYRIGHT
-Copyright \(co 2003 John Kasunich.
+Copyright (c) 2003 John Kasunich.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
