--- a/docs/documenting/contributing-documentation.asciidoc
+++ b/docs/documenting/contributing-documentation.asciidoc
@@ -15,6 +15,8 @@ work via these link:/community/contributing/[instructions.]
 
 == 2 click editing with "Edit This Page" link
 
+(Note:  You will need an account on github.com, sign up at https://github.com/ )
+
 On the right sidebar of this website is a link called "Edit This Page". When you click this
 you will be taken to the GitHub page of the document you want to
 improve. This works almost like a wiki, but we can still work with the 
