Correct 'Getting Started' section regards raspbian packages
Displays info for setting /etc/apt/sources.list.d/machinekit.list
to the 'jessie' repo

Should be the 'raspbian' repo

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/getting-started/installing-packages.asciidoc
+++ b/docs/getting-started/installing-packages.asciidoc
@@ -68,7 +68,7 @@ check back here before installing a new kernel.
 
 :leveloffset: +2
 
-- link:../APT-packages-jessie[APT Packages for Jessie]
+- link:../APT-packages-raspbian[APT Packages for Raspbian]
 
 - link:../install-rt-kernel-RPi2[Install the kernel]
 
