--- a/docs/man/man1/halmeter.asciidoc
+++ b/docs/man/man1/halmeter.asciidoc
@@ -9,93 +9,95 @@
 
 
 == NAME
-halmeter -- observe HAL pins, signals, and parameters
+**halmeter** -- observe HAL pins, signals, and parameters
 
 
 == SYNOPSIS
-halmeter
-[**-s**] [**pin**|**sig**|**param** __name__] [**-g** __X-positon Y-position [Width]__] 
+**halmeter** [**-s**] [**pin**|**sig**|**param** __name__]
+	     [**-g** __X-positon Y-position [Width]__] 
 
 
 == DESCRIPTION
 **halmeter** is used to observe HAL (Hardware Abstraction
-Layer) pins, signals, or parameters.  It serves the same
-purpose as a multimeter does when working on physical systems.
+Layer) pins, signals, or parameters. +
+It serves the same purpose as a multimeter does when working on physical systems.
 
 
 == OPTIONS
 
-**pin** __name__
+**pin** __name__ +
 display the HAL pin __name__.
 
-**sig** __name__
+**sig** __name__ +
 display the HAL signal __name__.
 
-**param** __name__
+**param** __name__ +
 display the HAL parameter __name__.
 
 If neither **pin**, **sig**, or **param** are specified, the
 window starts out blank and the user must select an item to observe.
 
-**--s**
+**--s** +
 small window.  Non-interactive, must be used with **pin**, **sig**,
 or **param** to select the item to display.  The item name is displayed 
 in the title bar instead of the window, and there are no "Select" or "Exit"
-buttons.  Handy when you want a lot of meters in a small space.
+buttons. +
+Handy when you want a lot of meters in a small space.
 
-**--g**
+**--g** +
 geometry position.  allows one to specify the intial starting position
 and optionally the width of the meter. Referenced from top left of screen 
-in pixel units.
+in pixel units. +
 Handy when you want to load a lot of meters in a script with out them
 displaying on top of each other.
 
 
 == USAGE
-Unless **--s** is specified, there are two buttons, "Select" and "Exit".
-"Select" opens a dialog box to select the item (pin, signal, or parameter)
-to be observed.  "Exit" does what you expect.
+Unless **--s** is specified, there are two buttons, `Select` and `Exit`.
 
-The selection dialog has "OK" "Apply", and "Cancel" buttons.  OK displays
-the selected item and closes the dialog.  "Apply" displays the selected
-item but keeps the selection dialog open.  "Cancel" closes the dialog
-without changing the displayed item.
+`Select` opens a dialog box to select the item (pin, signal, or parameter)
+to be observed.  `Exit` does what you expect.
+
+The selection dialog has `OK` `Apply`, and `Cancel` buttons. +
+`OK` displays the selected item and closes the dialog. +
+`Apply` displays the selected item but keeps the selection dialog open. +
+`Cancel` closes the dialog without changing the displayed item.
 
 
 
 == EXAMPLES
 
 
-**halmeter**
+**halmeter** =
 Opens a meter window, with nothing initially displayed.  Use the "Select"
 button to choose an item to observe.  Does not return until the window
 is closed.
 
-**halmeter &**
+**halmeter &** +
 Open a meter window, with nothing initially displayed.  Use the "Select"
 button to choose an item.  Runs in the background leaving the shell 
 free for other commands.
 
-**halmeter pin** __parport.0.pin-03-out__ **&**
-Open a meter window, initially displaying HAL pin __parport.0.pin-03-out__.
+**halmeter pin** __parport.0.pin-03-out__ **&** +
+Open a meter window, initially displaying HAL pin __parport.0.pin-03-out__. +
 The "Select" button can be used to display other items.  Runs in background.
 
 
-**halmeter -s pin** __parport.0.pin-03-out__ **&**
-Open a small meter window, displaying HAL pin __parport.0.pin-03-out__.
+**halmeter -s pin** __parport.0.pin-03-out__ **&** +
+Open a small meter window, displaying HAL pin __parport.0.pin-03-out__. +
 The displayed item cannot be changed.  Runs in background.
 
 
-**halmeter -s pin** __parport.0.pin-03-out__ **-g** __100 500__ **&** 
+**halmeter -s pin** __parport.0.pin-03-out__ **-g** __100 500__ **&** +
 Open a small meter window, displaying HAL pin __parport.0.pin-03-out__.
-places it 100 pixels to the left and 500 pixels down from top of screen.
+places it 100 pixels to the left and 500 pixels down from top of screen. +
 The displayed item cannot be changed.  Runs in background.
 
 
-**halmeter -s pin** __parport.0.pin-03-out__ **-g** __100 500 400__ **&** 
+**halmeter -s pin** __parport.0.pin-03-out__ **-g** __100 500 400__ **&** +
 Open a small meter window, displaying HAL pin __parport.0.pin-03-out__.
-places it 100 pixels to the left and 500 pixels down from top of screen.
-The width will be 400 pixels (270 is default)
+places it 100 pixels to the left and 500 pixels down from top of screen. +
+The width will be 400 pixels (270 is default) +
 The displayed item cannot be changed.  Runs in background.
 
 
